--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,7 +22,7 @@ jobs:
         go-version: '1.22'
 
     - name: Build
-      run: go build -v ./...
+      run: make build
 
     - name: Test
-      run: TESTCONTAINERS_RYUK_DISABLED=false go test ./... -cover -v
+      run: make test
